--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "discord.js": "^13.15.0",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "jimp": "^0.16.1",
     "moment": "^2.29.1",
